@@ -33,6 +33,12 @@ then
 			echo "Running unsuppored version of centos: $major"
 			exit -1
 		fi
+	elif [[ $ID == 'rocky' ]]
+	then
+		dnf install epel-release -y
+		dnf install dnf-plugins-core -y
+		dnf config-manager --set-enabled powertools -y
+		dnf install make automake yum-utils -y
 	else
 		echo "Running unsuppored os: $ID"
 		exit -1
